2017-11-07  Aakash Jain  <aakash_jain@apple.com>

        Enable webkitpy EWS bubbles
        https://bugs.webkit.org/show_bug.cgi?id=178539

        Reviewed by Alexey Proskuryakov.

        * QueueStatusServer/config/queues.py: Added webkitpy EWS.

2017-11-07  Don Olmstead  <don.olmstead@sony.com>

        Add a WinCairo EWS queue
        https://bugs.webkit.org/show_bug.cgi?id=179390

        Reviewed by Lucas Forschler.

        * QueueStatusServer/config/queues.py:
        * QueueStatusServer/model/queues.py:
        * Scripts/webkitpy/common/config/ews.json:
        * Scripts/webkitpy/common/config/ports.py:
        * Scripts/webkitpy/common/config/ports_unittest.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:

2017-11-07  Aakash Jain  <aakash_jain@apple.com>

        fix check-webkit-style errors in webkitpy about not having two spaces before inline comment
        https://bugs.webkit.org/show_bug.cgi?id=171506

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/common/checkout/scm/scm_unittest.py:
        (SCMTest._shared_test_reverse_diff): Added two spaces before inline comment.
        (test_create_patch_is_full_patch): Ditto.
        * Scripts/webkitpy/common/thread/messagepump.py:
        (MessagePump): Ditto.
        * Scripts/webkitpy/layout_tests/servers/http_server.py:
        (Lighttpd._prepare_config): Ditto.
        * Scripts/webkitpy/style/checker.py: Ditto.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
        (OrderOfIncludesTest.test_check_preprocessor_in_include_section): Ditto.

2017-11-07  Aakash Jain  <aakash_jain@apple.com>

        Add support for webkitpy tests EWS
        https://bugs.webkit.org/show_bug.cgi?id=178480

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/common/config/ews.json: Added webkitpy EWS.
        * Scripts/webkitpy/common/net/generictestresults.py: Renamed from Scripts/webkitpy/common/net/bindingstestresults.py.