@@ -195,6 +195,11 @@ class WinCairoPort(DeprecatedPort):
         command.append('--64-bit')
         return command
 
+    def run_webkit_tests_command(self, build_style=None):
+        command = super(WinCairoPort, self).run_webkit_tests_command(build_style)
+        command.append("--wincairo")
+        return command
+
 
 class GtkWK2Port(DeprecatedPort):
     port_flag_name = "gtk-wk2"
